cmake_minimum_required(VERSION 3.18.4)
project(todoer VERSION 0.7.4)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
if (MSVC)
    add_compile_options(/W4)
else()
    add_compile_options(-Wno-pedantic -DDEBUG)
endif()
add_executable(todoer src/libs.h src/utils.h src/utils.cpp src/Task.h src/task.cpp src/main.cpp)
